<resources>
    <!--  APP  -->
    <string name="app_name">MathGame</string>

    <!--  WELCOME SCREEN  -->
    <string name="welcome_screen_app_name">TheMathGame</string>
    <string name="welcome_screen_header">Cześć!</string>
    <string name="welcome_screen_subheader">Podaj swoje imię:</string>
    <string name="welcome_screen_name_placeholder">Twoje imię</string>
    <string name="welcome_screen_play_button">Graj!</string>
    <string name="welcome_screen_empty_name_error">Pole nie może być puste</string>
    <integer name="welcome_screen_max_name_length">15</integer>

    <!--  CHOOSE GAME SCREEN  -->
    <string name="choose_game_screen_header">Witaj, %s</string>
    <string name="choose_game_screen_subheader">wybierz grę:</string>
    <string name="choose_game_screen_subheader_stroke_width">2pt</string>
    <string name="choose_game_screen_adding">DODAWANIE</string>
    <string name="choose_game_screen_subtracting">ODEJMOWANIE</string>
    <string name="choose_game_screen_multiplying">MNOŻENIE</string>
    <string name="choose_game_screen_dividing">DZIELENIE</string>

    <!--  ADDNIG GAME SCREEN  -->
    <string name="adding_game_screen_header">Dodawanie</string>
    <string name="adding_game_screen_adding_description">Jaki jest wynik działania?</string>
    <string name="adding_game_screen_adding_sign">+</string>
    <string name="adding_game_screen_adding_result">odpowiedź:</string>
    <string name="adding_game_screen_correct_result">Brawo!</string>
    <string name="adding_game_screen_incorrect_number_of_rounds">Granica musi być większa od 0</string>
    <string name="adding_game_screen_incorrect_result">Zła odpowiedź</string>
    <string name="adding_game_screen_quit_game_taps_description">Naciśniej jeszcze raz, by zakończyć</string>
    <string name="adding_game_screen_btn_result">sprawdź</string>
    <string name="adding_game_screen_score_description">Punkty:</string>
    <string name="adding_game_screen_rounds_description">Pozostało rund:</string>
    <string name="adding_game_screen_empty_result">Brak odpowiedzi</string>
    <string name="adding_game_screen_back_button_disabled_info">Przycisk zablokowany</string>
    <string name="adding_game_btn_quit_game">Zakończ</string>

    <!--  GAME SETTINGS SCREEN  -->
    <string name="game_settings_screen_header">Ustawienia gry</string>
    <string name="game_settings_rounds_description">Ilość rund:</string>
    <string name="game_settings_rounds_default_value">5</string>
    <string name="game_settings_range_description">Zakres:</string>
    <string name="game_settings_range_default_value">10</string>
    <string name="dividing_game_settings_range_default_value">20</string>
    <string name="game_settings_screen_range_tip">Określ zakres (górną granicę)</string>
    <string name="game_settings_screen_btn_play">START!</string>
    <string name="game_settings_screen_missing_rounds_error_message">Określ ilość rund</string>
    <string name="game_settings_screen_missing_range_error_message">Podaj zakres</string>
    <string name="game_settings_screen_incorrect_rounds_error_message">Ilość rund musi być większa niż 0</string>
    <string name="game_settings_screen_incorrect_range_error_message">Granica musi być większa niż, lub równa 10</string>
    <string name="game_settings_screen_source_adding">DODAWANIE</string>
    <string name="game_settings_screen_source_subtracting">ODEJMOWANIE</string>
    <string name="game_settings_screen_source_multiplying">MNOŻENIE</string>
    <string name="game_settings_screen_source_dividing">DZIELENIE</string>
    <string name="game_settings_subtraction_toggle_description">Wynik ujemny</string>
    <string name="game_settings_subtraction_toggle_setting_on">Ujemny wynik dozwolony</string>
    <string name="game_settings_subtraction_toggle_setting_off">Tylko dodatnie wyniki</string>
    <string name="game_settings_dividing_toggle_description">Ułamki</string>
    <string name="game_settings_dividing_toggle_setting_on">Ułamki dozwolone</string>
    <string name="game_settings_dividing_toggle_setting_off">Tylko liczby całkowite</string>


    <!--  SUBTRACTING GAME SCREEN  -->
    <string name="subtracting_game_screen_header">Odejmowanie</string>
    <string name="subtracting_game_screen_substract_sign">-</string>

    <!--  MULTIPLYING GAME SCREEN  -->
    <string name="multiplying_game_screen_header">Mnożenie</string>
    <string name="multiplying_game_screen_multiply_sign">x</string>


    <!--  DIVIDING GAME SCREEN  -->
    <string name="dividing_game_screen_header">Dzielenie</string>
    <string name="dividing_game_screen_divide_sign">:</string>


    <!--  END GAME SCREEN  -->
    <string name="end_game_screen_header">KONIEC!</string>
    <string name="end_game_screen_summary">Podsumowanie zadania</string>
    <string name="end_game_screen_summary_description">zobacz jak Ci poszło:</string>
    <string name="end_game_screen_summary_correct">Dobrze:</string>
    <string name="end_game_screen_summary_incorrect">Źle:</string>
    <string name="end_game_screen_summary_percentage">Procent:</string>
    <string name="end_game_screen_summary_end_score">Ocena końcowa:</string>
    <string name="end_game_screen_summary_end_score_a">Celujący!!!</string>
    <string name="end_game_screen_summary_end_score_b">Bardzo dobry!</string>
    <string name="end_game_screen_summary_end_score_c">Dobry</string>
    <string name="end_game_screen_summary_end_score_d">Dostateczny</string>
    <string name="end_game_screen_summary_end_score_e">Dopuszczający</string>
    <string name="end_game_screen_summary_end_score_f">Niedostateczny :(</string>
    <string name="end_game_screen_btn_replay">Jeszcze raz!</string>
    <string name="end_game_screen_btn_end">Zakończ</string>


    <!--  GAME  -->
    <string name="game_adding_header">Dodawanie</string>
    <string name="game_subtracting_header">Odejmowanie</string>
    <string name="game_multiplying_header">Mnożenie</string>
    <string name="game_dividing_header">Dzielenie</string>
    <string name="game_main_card_header">Jaki jest wynik działania?</string>
    <string name="game_adding_sign">+</string>
    <string name="game_subtracting_sign">-</string>
    <string name="game_multiplying_sign">x</string>
    <string name="game_dividing_sign">:</string>
    <string name="game_user_answer_card_header">odpowiedź:</string>
    <string name="game_btn_check_result">sprawdź</string>
    <string name="game_current_score_description">Punkty:</string>
    <string name="game_rounds_left_description">Pozostało rund:</string>

</resources>