<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_2"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        style="@style/screen_header_card_view">

        <com.google.android.material.textview.MaterialTextView
            style="@style/screen_header_text_view"
            android:text="@string/welcome_screen_app_name"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        style="@style/content_card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10pt"
            android:orientation="vertical">

            <TextView
                android:text="@string/welcome_screen_header"
                style="@style/content_header_text_view"/>

            <TextView
                android:text="@string/welcome_screen_subheader"
                android:layout_marginBottom="10pt"
                style="@style/content_subheader_text_view"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/user_input_field"
                android:layout_width="match_parent">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/user_input_field_text"
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:hint="@string/welcome_screen_name_placeholder"
                    android:inputType="textCapWords"
                    android:maxLength="@integer/welcome_screen_max_name_length"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_start"
                android:layout_marginTop="10pt"
                android:text="@string/welcome_screen_play_button"
                style="@style/dark_button"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>