<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_bg_2"
    android:orientation="vertical"
    tools:context=".EndGame">

    <com.google.android.material.card.MaterialCardView
        style="@style/screen_header_card_view"
        android:layout_marginBottom="20pt">
        <com.google.android.material.textview.MaterialTextView
            style="@style/screen_header_text_view"
            android:id="@+id/et_endgame_header"
            android:text="@string/end_game_screen_header"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        style="@style/content_card_view">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10pt"
            android:orientation="vertical">
            <TextView
                style="@style/content_header_text_view"
                android:id="@+id/et_endgame_summary_card_header"
                android:text="@string/end_game_screen_summary"/>
            <TextView
                style="@style/content_subheader_text_view"
                android:id="@+id/et_endgame_summary_card_subheader"
                android:text="@string/end_game_screen_summary_description"
                android:layout_marginBottom="15pt"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20pt"
                android:layout_marginEnd="20pt">
                <TextView
                    style="@style/endgame_screen_summary_descriptions"
                    android:id="@+id/et_endgame_summary_card_correct_description"
                    android:text="@string/end_game_screen_summary_correct"/>
                <TextView
                    style="@style/endgame_screen_summary_values"
                    android:id="@+id/et_endgame_summary_card_correct_value"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20pt"
                android:layout_marginEnd="20pt">
                <TextView
                    style="@style/endgame_screen_summary_descriptions"
                    android:id="@+id/et_endgame_summary_card_incorrect_description"
                    android:text="@string/end_game_screen_summary_incorrect"/>
                <TextView
                    style="@style/endgame_screen_summary_values"
                    android:id="@+id/et_endgame_summary_card_incorrect_value"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20pt"
                android:layout_marginEnd="20pt">
                <TextView
                    style="@style/endgame_screen_summary_descriptions"
                    android:id="@+id/et_endgame_final_percentage_description"
                    android:text="@string/end_game_screen_summary_percentage"/>
                <TextView
                    style="@style/endgame_screen_summary_values"
                    android:id="@+id/et_endgame_final_percentage_value"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20pt"
                android:layout_marginEnd="20pt"
                android:layout_marginTop="15pt">
                <TextView
                    style="@style/endgame_screen_final_score_description"
                    android:id="@+id/et_endgame_summary_final_score_description"
                    android:text="@string/end_game_screen_summary_end_score"/>
                <TextView
                    style="@style/endgame_screen_final_score"
                    android:id="@+id/et_endgame_summary_final_score_value"
                    android:layout_marginBottom="20pt"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/green_button"
                android:id="@+id/btn_endgame_replay"
                android:text="@string/end_game_screen_btn_replay"/>

            <com.google.android.material.button.MaterialButton
                style="@style/red_button"
                android:id="@+id/btn_endgame_quit_game"
                android:text="@string/end_game_screen_btn_end"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>