<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_2"
    android:orientation="vertical"
    tools:context=".GameSubtracting">

    <com.google.android.material.card.MaterialCardView
        style="@style/screen_header_card_view"
        android:layout_marginBottom="10pt">
        <com.google.android.material.textview.MaterialTextView
            style="@style/screen_header_text_view"
            android:text="@string/subtracting_game_screen_header"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        style="@style/content_card_view">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@color/card_light_background">
            <com.google.android.material.textview.MaterialTextView
                style="@style/content_header_text_view"
                android:id="@+id/et_adding_description"
                android:text="@string/adding_game_screen_adding_description"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp">
                <com.google.android.material.textview.MaterialTextView
                    style="@style/numbers_text_view"
                    android:id="@+id/et_first_number"/>
                <com.google.android.material.textview.MaterialTextView
                    style="@style/numbers_text_view"
                    android:id="@+id/et_subtract_sign"
                    android:text="@string/subtracting_game_screen_substract_sign"
                    android:layout_marginStart="5pt"
                    android:layout_marginEnd="5pt"/>
                <com.google.android.material.textview.MaterialTextView
                    style="@style/numbers_text_view"
                    android:id="@+id/et_second_number"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        style="@style/content_user_result_card_view"
        android:layout_marginTop="15pt">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                style="@style/content_subheader_text_view"
                android:text="@string/adding_game_screen_adding_result"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/user_input_field"
                android:layout_width="match_parent"
                app:boxBackgroundMode="none">
                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/user_input_field_text"
                    android:id="@+id/et_subtracting_user_result"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:textSize="55sp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        style="@style/dark_button"
        android:layout_marginTop="5pt"
        android:layout_marginBottom="20pt"
        android:id="@+id/btn_check_subtracting_result"
        android:text="@string/adding_game_screen_btn_result"/>

    <com.google.android.material.card.MaterialCardView
        style="@style/content_card_view"
        android:layout_width="wrap_content"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/white"
            android:paddingStart="15pt"
            android:paddingEnd="10pt">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="end">
                <com.google.android.material.textview.MaterialTextView
                    style="@style/content_regular_text_view"
                    android:id="@+id/adding_game_screen_score_description"
                    android:layout_marginEnd="10dp"
                    android:text="@string/adding_game_screen_score_description"/>
                <com.google.android.material.textview.MaterialTextView
                    style="@style/content_regular_text_view"
                    android:id="@+id/user_subtracting_score"
                    android:layout_marginStart="3pt"
                    android:layout_marginEnd="3pt"
                    android:textColor="@color/card_colored_text_colour"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="end">
                <com.google.android.material.textview.MaterialTextView
                    style="@style/content_regular_text_view"
                    android:id="@+id/adding_game_screen_rounds_description"
                    android:text="@string/adding_game_screen_rounds_description"
                    android:layout_marginEnd="10dp"/>
                <com.google.android.material.textview.MaterialTextView
                    style="@style/content_regular_text_view"
                    android:id="@+id/user_subtracting_rounds_left"
                    android:layout_marginStart="3pt"
                    android:layout_marginEnd="3pt"
                    android:textColor="@color/card_colored_text_colour"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.button.MaterialButton
        style="@style/red_button"
        android:id="@+id/btn_quit_game"
        android:text="@string/adding_game_btn_quit_game"
        android:layout_gravity="end"
        android:layout_marginEnd="10pt"
        android:layout_marginBottom="10pt"/>


</LinearLayout>